--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "phylotree": "git+https://github.com/veg/phylotree.js.git",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-connect-elements": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
