--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,4 @@
-
 {
-  "presets": [
-    "es2015",
-    "react"
-  ],
-  "plugins": [
-  "transform-decorators-legacy",
-  "transform-class-properties"
-]
+  "presets": ["es2015", "react"],
+  "plugins": ["transform-decorators-legacy", "transform-class-properties"]
 }
