--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/tooltip": "^15.2.6",
+    "@material-ui/core": "^4.9.12",
     "@popperjs/core": "^2.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -21,10 +23,10 @@
     "phylotree": "git+https://github.com/veg/phylotree.js.git",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
-    "react-connect-elements": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0",
+    "react-select": "^2.4.4",
+    "styled-components": "^5.1.0",
     "underscore": "^1.9.2"
   },
   "scripts": {
