--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "array-move": "^2.2.1",
     "bootbox": "^5.4.0",
     "bootstrap": "^3.3.5",
     "csv-parser": "^2.3.2",
@@ -22,10 +23,11 @@
     "neat-csv": "^5.2.0",
     "phylotree": "git+https://github.com/veg/phylotree.js.git",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
+    "react-sortable-hoc": "^1.11.0",
     "styled-components": "^5.1.0",
     "underscore": "^1.9.2"
   },
