--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "phylotree": "git+https://github.com/veg/phylotree.js.git",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
