--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "dependencies": {
     "@atlaskit/tooltip": "^15.2.6",
     "@material-ui/core": "^4.9.12",
-    "@popperjs/core": "^2.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "array-move": "^2.2.1",
     "bootbox": "^5.4.0",
     "bootstrap": "^3.3.5",
-    "csv-parser": "^2.3.2",
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.15.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
@@ -64,6 +62,7 @@
     "node-env-run": "^3.0.2",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "pino-colada": "^1.6.1"
+    "pino-colada": "^1.6.1",
+    "yargs-parser": "^18.1.3"
   }
 }
