--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
+    "react-resizable": "^1.10.1",
+    "react-rnd": "^10.1.10",
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
