--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@atlaskit/tooltip": "^15.2.6",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -25,8 +24,6 @@
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
-    "react-resizable": "^1.10.1",
-    "react-rnd": "^10.1.10",
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
@@ -35,7 +32,7 @@
   },
   "scripts": {
     "server": "node-env-run server --exec nodemon | pino-colada",
-    "dev": "run-p server start",
+    "evidente": "run-p server start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
