--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "jquery": "^3.5.1",
     "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
     "neat-csv": "^5.2.0",
     "phylotree": "git+https://github.com/veg/phylotree.js.git",
+    "puppeteer": "^3.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
