git ignore working

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+*
 # dependencies
 !node_modules/
-node_modules/**
 !/node_modules/phylotree/
-/node_modules/phylotree/**
 !/node_modules/phylotree/src/
+!/node_modules/phylotree/src/phylotree*
+
+!/src/**
+!/public/**
+!/server/**
+
+!.babelrc
+!.env
+!README.md
+!package-lock.json
+!package.json
 /.pnp
 .pnp.js
 
