--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.15.1",
-    "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.5.1",
-    "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
     "neat-csv": "^5.2.0",
     "phylotree": "git+https://github.com/veg/phylotree.js.git",
@@ -28,9 +26,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
-    "styled-components": "^5.1.0",
-    "underscore": "^1.9.2",
-    "wkhtmltopdf": "^0.3.4"
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "server": "node-env-run server --exec nodemon | pino-colada",
