Repairs commit with label and SNP dragging Adds the labels file Repairs the dragging of the SNPs to see all of them

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,13 @@
 !/node_modules/phylotree/src/
 !/node_modules/phylotree/src/phylotree*
 
-!/src/**
-!/public/**
-!/server/**
+!/src/
+!/src/*
+!/src/components/*
+!/public/
+!/public/*
+!/server/
+!/server/*
 
 !.babelrc
 !.env
