Adds npm for forked repository. This way the user can make a clean install w/o losing the file

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@testing-library/user-event": "^7.2.1",
     "array-move": "^2.2.1",
     "bootbox": "^5.4.0",
-    "bootstrap": "^3.3.5",
+    "bootstrap": "^4.5.0",
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
-    "d3v5": "npm:d3@^5.15.1",
+    "d3v5": "npm:d3@^5.16.0",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.16",
     "neat-csv": "^5.2.0",
-    "phylotree": "git+https://github.com/veg/phylotree.js.git",
+    "phylotree": "github:mwittep/phylotree.js",
     "puppeteer": "^3.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
