--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "array-move": "^2.2.1",
     "bootbox": "^5.4.0",
     "bootstrap": "^4.5.0",
+    "colorbrewer": "^1.3.0",
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.16.0",
