--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "puppeteer": "^3.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-dialog": "^0.13.0",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
