--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.16.0",
+    "evergreen-ui": "^4.28.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.16",
     "neat-csv": "^5.2.0",
