--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "d3v5": "npm:d3@^5.16.0",
     "evergreen-ui": "^4.28.1",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.16",
+    "lodash": "^4.17.19",
     "neat-csv": "^5.2.0",
     "phylotree": "github:mwittep/phylotree.js",
     "puppeteer": "^3.3.0",
@@ -27,6 +27,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
+    "react-virtualized": "^9.21.2",
     "styled-components": "^5.1.0"
   },
   "scripts": {
