--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-*
-# dependencies
-!node_modules/
-!/node_modules/phylotree/
-!/node_modules/phylotree/src/
-!/node_modules/phylotree/src/phylotree*
-
-!/src/
-!/src/**
-# !/src/components/*
-!/public/
-!/public/**
-!/server/
-!/server/**
-
-!.babelrc
-!.env
-!README.md
-!package-lock.json
-!package.json
+/node_modules
+/.vs
+/.vscode
 /.pnp
 .pnp.js
 
