--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.4.1",
     "react-select": "^2.4.4",
