--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "d3v5": "npm:d3@^5.16.0",
     "evergreen-ui": "^4.28.1",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "neat-csv": "^5.2.0",
     "phylotree": "github:mwittep/phylotree.js",
     "puppeteer": "^3.3.0",
+    "re-resizable": "^6.9.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
