--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.16.0",
     "evergreen-ui": "^4.28.1",
+    "html2canvas": "^1.3.2",
     "jquery": "^3.5.1",
+    "jspdf": "^2.3.1",
     "lodash": "^4.17.21",
     "neat-csv": "^5.2.0",
     "phylotree": "github:mwittep/phylotree.js",
