--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
+    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -20,6 +21,7 @@
     "lodash": "^4.17.21",
     "neat-csv": "^5.2.0",
     "phylotree": "github:mwittep/phylotree.js",
+    "popper.js": "^1.16.1",
     "puppeteer": "^3.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
