--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.16.0",
+    "dom-to-image": "^2.6.0",
     "evergreen-ui": "^4.28.1",
     "html2canvas": "^1.3.2",
     "jquery": "^3.5.1",
