--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "server2": "cd server && ../env/bin/python3 backend_main.py",
+    "server2": "cd server && flask run --no-debugger",
     "evidente": "run-p server2 start",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -58,7 +58,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
