--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       with:
           node-version: 12
     - name: install
-      run: npm ci
+      run: npm install
     - name: build
       run: npm run build
     - name: list files
