adding folders/files to .gitignore, only copy to server on master branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ on:
   # but only for the main branch
   push:
     branches:
-      - development
+      - master
   pull_request:
     branches:
-      - development
+      - master
 
 jobs:
   rsync-deployment:
