--- a/package.json
+++ b/package.json
@@ -6,32 +6,29 @@
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "array-move": "^2.2.1",
     "bootstrap": "^4.5.0",
+    "browserify": "^17.0.0",
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.16.0",
     "dom-to-image": "^2.6.0",
-    "evergreen-ui": "^4.28.1",
+    "evergreen-ui": "^2.0.1",
     "html2canvas": "^1.3.2",
     "jquery": "^3.5.1",
-    "jspdf": "^2.3.1",
     "lodash": "^4.17.21",
-    "neat-csv": "^5.2.0",
+    "jspdf": "^2.3.1",
     "phylotree": "github:mwittep/phylotree.js",
-    "popper.js": "^1.16.1",
-    "puppeteer": "^3.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-loading-overlay": "^1.0.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.*.*",
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
     "react-virtualized": "^9.21.2",
@@ -62,13 +59,9 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-pino-logger": "^4.0.0",
     "formidable": "^1.2.2",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "pino-colada": "^1.6.1",
     "prop-types": "^15.7.2",
     "yargs-parser": "^18.1.3"
   }
