Running merged version dolores work

--- a/package.json
+++ b/package.json
@@ -3,25 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "array-move": "^2.2.1",
+    "babel-plugin-polyfill-corejs2": "^0.4.3",
     "bootstrap": "^4.5.0",
     "browserify": "^17.0.0",
+    "builtin-modules": "^3.3.0",
+    "core-js-compat": "^3.30.2",
     "d3": "^3.5.17",
     "d3-boxplot": "^0.7.5",
     "d3v5": "npm:d3@^5.16.0",
     "dom-to-image": "^2.6.0",
+    "ejs": "^3.1.9",
     "evergreen-ui": "^2.0.1",
+    "fastq": "^1.15.0",
+    "gensync": "^1.0.0-beta.2",
     "html2canvas": "^1.3.2",
+    "is-core-module": "^2.12.1",
+    "is-module": "^1.0.0",
     "jquery": "^3.5.1",
+    "jsesc": "^3.0.2",
     "jspdf": "^2.3.1",
+    "jss": "^10.10.0",
+    "jss-plugin-camel-case": "^10.10.0",
+    "jss-plugin-default-unit": "^10.10.0",
+    "jss-plugin-global": "^10.10.0",
+    "jss-plugin-nested": "^10.10.0",
+    "jss-plugin-props-sort": "^10.10.0",
+    "jss-plugin-rule-value-function": "^10.10.0",
+    "jss-plugin-vendor-prefixer": "^10.10.0",
     "lodash": "^4.17.21",
-    "phylotree": "github:mwittep/phylotree.js",
+    "material-ui": "^0.20.2",
+    "phylotree": "github:Integrative-Transcriptomics/phylotree.js",
+    "picomatch": "^2.3.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -33,7 +52,13 @@
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
     "react-virtualized": "^9.21.2",
-    "styled-components": "^5.1.0"
+    "regenerator-transform": "^0.15.1",
+    "regexpu-core": "^5.3.2",
+    "run-parallel": "^1.2.0",
+    "schema-utils": "^4.0.1",
+    "styled-components": "^5.1.0",
+    "stylis-rule-sheet": "^0.0.10",
+    "to-fast-properties": "^4.0.0"
   },
   "scripts": {
     "server": "cd server && flask run --no-debugger",
