--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "popper.js": "^1.16.1",
     "array-move": "^2.2.1",
     "bootstrap": "^4.5.0",
     "browserify": "^17.0.0",
@@ -20,9 +19,10 @@
     "evergreen-ui": "^2.0.1",
     "html2canvas": "^1.3.2",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.21",
     "jspdf": "^2.3.1",
-    "phylotree": "github:mwittep/phylotree.js",
+    "lodash": "^4.17.21",
+    "phylotree": "github:Integrative-Transcriptomics/phylotree.js",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-color": "^2.18.1",
@@ -38,8 +38,8 @@
   "scripts": {
     "server": "cd server && flask run --no-debugger",
     "evidente": "run-p server start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider  start",
+    "build": "react-scripts --openssl-legacy-provider  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
