--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-loading-overlay": "^1.0.1",
-    "react-scripts": "^4.*.*",
+    "react-scripts": "^5.0.1",
     "react-select": "^2.4.4",
     "react-sortable-hoc": "^1.11.0",
     "react-virtualized": "^9.21.2",
