--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ charset-normalizer==2.0.8
 click==8.0.3
 docopt==0.6.2
 Flask==2.0.2
-goatools==1.1.6
+goatools==1.4.12
 idna==3.3
 importlib-metadata==4.8.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-numpy==1.21.4
+numpy==1.22.0
 ordered-set==4.0.2
 packaging==21.3
 pandas==1.3.4
@@ -32,3 +32,4 @@ wget==3.2
 xlrd==1.2.0
 XlsxWriter==3.0.2
 zipp==3.6.0
+gunicorn==23.0.0
